--- a/react-gallery-app/src/css/index.css
+++ b/react-gallery-app/src/css/index.css
@@ -1,7 +1,8 @@
 body {
   text-align: center;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #3f4850;
+  background-color: #5b9aa0;
 }
 
 h2 {
@@ -27,7 +28,7 @@ a {
 
 .search-form button {
   outline: none;
-  background-color: #438bbd;
+  background-color: #b8a9c9;
   border: none;
   padding: 0px 15px;
   border-radius: 0 0.35em 0.35em 0;
@@ -52,16 +53,22 @@ input {
 
 .main-nav a {
   display: block;
-  background: #438bbd;
+  background: #b8a9c9;
   border-radius: 3px;
   padding: 5px;
   color: #fff;
+  box-shadow: 1px 3px 2px 2px black;
 }
 
 .main-nav .active,
 .main-nav a:hover,
 .search-form button:hover {
-  background-color: #275270;
+  background-color: #622569;
+}
+
+.main-nav .active {
+  transform: translate(1px, 3px);
+  box-shadow: 0px 1px 2px 1px black;
 }
 
 .photo-container ul {
@@ -93,7 +100,7 @@ input {
   width: 100%;
 }
 
-@media only screen and (max-width: 767px)  {
+@media only screen and (max-width: 767px) {
   body {
     padding-top: 2em;
   }
@@ -103,7 +110,7 @@ input {
   }
 }
 
-@media only screen and (min-width: 768px)  {
+@media only screen and (min-width: 768px) {
   body {
     padding-top: 4em;
   }
@@ -117,7 +124,7 @@ input {
     display: flex;
     justify-content: center;
   }
-  
+
   .main-nav li {
     margin: 10px;
     width: 100px;
